# Aurum-FINORA

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.kdq  Dockerfile.ui  FINORA_RESEARCH_VALIDATION_REPORT.md  Makefile  README.md  SECURITY.md  compose.production.yml  docker-compose.yml  finora_downloader.py  pyproject.toml  requirements-api.txt  requirements-kdq.txt  requirements.txt  test_load.py  verify_environment.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  model_validation.yml  provider_integration.yml  research_experiment.yml  security_report.yml
.github/workflows/: ci.yml  phase3-validation.yml
config/: kdq-smoke.yaml  kdq.yaml  phase3-gates.yaml  settings.yaml
configs/: research_campaign_v1.yaml
data/balance_sheet/: HD.csv  MA.csv  PG.csv  UNH.csv  V.csv
data/cashflow/: AMZN.csv  BAC.csv  HD.csv  MA.csv  MSFT.csv  PG.csv  UNH.csv  V.csv  WMT.csv
data/crypto/: ADA_USD.csv  BNB_USD.csv  BTC_USD.csv  ETH_USD.csv  SOL_USD.csv  XRP_USD.csv
data/dividends/: AAPL.csv  BAC.csv  GOOGL.csv  HD.csv  JPM.csv  MA.csv  META.csv  MSFT.csv  NVDA.csv  PG.csv  UNH.csv  V.csv  WMT.csv
data/etfs/: DIA.csv  IWM.csv  QQQ.csv  SPY.csv  VOO.csv  VTI.csv  XLE.csv  XLF.csv  XLK.csv
data/financials/: HD.csv  MA.csv  PG.csv  UNH.csv  V.csv
data/forex/: AUDUSDX.csv  CADX.csv  EURUSDX.csv  GBPUSDX.csv  INRX.csv  JPYX.csv
data/fundamentals/: AAPL.csv  AMZN.csv  BAC.csv  GOOGL.csv  HD.csv  JPM.csv  MA.csv  META.csv  MSFT.csv  NVDA.csv  PG.csv  TSLA.csv  UNH.csv  V.csv  WMT.csv
data/indices/: BSESN.csv  DJI.csv  GSPC.csv  IXIC.csv  NSEI.csv  RUT.csv  VIX.csv
data/metadata/: dataset_manifest.csv
data/mutual_funds/: FXAIX.csv  SWPPX.csv  VFIAX.csv  VTSAX.csv
data/splits/: AAPL.csv  AMZN.csv  BAC.csv  GOOGL.csv  HD.csv  (+9 more)
docs/: API_KEYS_SETUP.md  APPROVAL_PACKAGE.md  ARCHITECTURE.md  BACKTESTING.md  BASELINE_MODELS.md  BENCHMARKS.md  BIAS_DATASET_PLAN.md  COMPLIANCE_CHECKLIST.md  DATA_PLATFORM.md  DATA_PROVIDER_SETUP.md  DEPLOYMENT.md  DISTILLATION_MOE.md  EXTERNAL_VALIDATION_MATRIX.md  FINORA_KDQ.md  FINORA_MOE_ARCHITECTURE.md  FUSION_LAYER.md  GITHUB_READY_HANDOFF.md  GPT_OSS_INTEGRATION.md  GPU_BENCHMARKING.md  INTERVIEW_TALKING_POINTS.md  LLM_REASONING_POLICY.md  MODEL_DOWNLOADS.md  MODEL_RISK.md  MODEL_STACK.md  MOE_ROUTER.md  PHASE2_PRODUCTION.md  PHASE3_PRODUCTION_VALIDATION.md  PHASE3_RESEARCH_VALIDATION.md  PHASE4_STAGING_READINESS.md  PHASE5_EVIDENCE_REPORT.md  PHASE6_REAL_EXECUTION_VALIDATION.md  PHASE7_GITHUB_RELEASE_READINESS.md  PHASE8_PUBLIC_RELEASE.md  PORTFOLIO_PRESENTATION.md  PROJECT_ANALYSIS_REPORT.md  PROJECT_PORTFOLIO_ROADMAP.md  PROJECT_STATUS.md  PUBLIC_RELEASE_CHECKLIST.md  RAG_SAFETY.md  RESEARCH_CHANGE_CONTROL.md  (+4 more)
load/: locustfile.py
monitoring/: prometheus.yml
prompts/: system_prompt.md
scripts/: backtest_backtrader.py  benchmark_gpt_oss_phase3.py  benchmark_onnx_phase3.py  benchmark_phase3.py  benchmark_phase6_real_models.py  demo_forecast.py  demo_portfolio_run.ps1  demo_portfolio_run.sh  deploy_kdq_artifact.py  disaster_recovery.py  run_research_campaign.py  run_research_validation.py  run_rp1_publication_005_robustness.py  run_rp1_publication_005b_corrections.py  security_phase3.py  train_tabular_model.py
tests/: test_api.py  test_benchmark.py  test_benchmarking_phase3.py  test_bias.py  test_capabilities.py  test_concurrency_phase3.py  test_connectors_quality_features.py  test_data_platform.py  test_edge_contracts.py  test_forecast_system.py  test_graph_neo4j.py  test_kdq.py  test_llm.py  test_moe.py  test_observability.py  test_operations.py  test_pipeline.py  test_production_validation.py  test_rag.py  test_reliability_phase3.py  test_research.py  test_security.py  test_security_phase3.py
(+207 files in other folders)
