[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aurum-finora"
version = "1.1.0"
description = "Aurum / FINORA — transparent, auditable, probabilistic financial decision-support system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary — internal research use" }
authors = [{ name = "FINORA Principal Council" }]
keywords = ["finance", "forecasting", "rag", "quant", "risk", "time-series"]

# Core runtime dependencies (kept lean; heavy/optional deps live in extras).
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Statistical + classic ML forecasting
stats = [
    "statsmodels>=0.14",
    "arch>=6.3",
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "lightgbm>=4.6",
    "catboost>=1.2",
]
backtesting = [
    "backtrader>=1.9.78.123",
]
# Deep / foundation time-series models
deep = [
    "torch>=2.2",
    "neuralforecast>=1.7",
    "chronos-forecasting>=1.2",
]
# Retrieval / RAG
rag = [
    "sentence-transformers>=2.6",
    "rank-bm25>=0.2.2",
    "qdrant-client>=1.8",
    "neo4j>=5.18",
]
# Data ingestion
data = [
    "yfinance>=0.2.37",
    "fredapi>=0.5",
    "requests>=2.31",
    "feedparser>=6.0",
    "duckdb>=0.10",
    "pyarrow==16.1.0",
]
# NLP / sentiment
nlp = [
    "transformers>=4.39",
]
security = [
    "cryptography>=42.0",
    "PyJWT[crypto]>=2.8",
]
observability = [
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
]
# Lean API runtime
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
# Distilled multimodal student training, QAT, and portable export
kdq = [
    "torch>=2.2",
    "onnx>=1.16",
    "onnxscript>=0.1.0",
]
# MLOps services and drift dashboards (run separately in production)
ops = [
    "mlflow>=2.11",
    "evidently>=0.4",
]
ui = [
    "streamlit>=1.40",
]
# Backward-compatible combined extra
serve = [
    "aurum-finora[api,ops]",
]
# Developer tooling
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "mypy>=1.9",
    "pip-audit>=2.7",
    "locust>=2.32",
    "onnxscript>=0.1.0",
    "pyarrow==16.1.0",
]
# Convenience meta-extra
all = [
    "aurum-finora[stats,backtesting,deep,kdq,rag,data,nlp,security,observability,api,ops,ui,dev]",
]

[project.scripts]
aurum-demo = "aurum.demo:main"
aurum = "aurum.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src", "."]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated.*:Warning",
    "ignore:The PyTorch API of nested tensors is in prototype stage.*:UserWarning",
    "ignore:Converting a tensor to a Python boolean might cause the trace to be incorrect.*:torch.jit.TracerWarning",
]
markers = [
    "live: credentialed external-provider integration test",
    "model: real model-weight integration test",
    "gpu: requires a CUDA-capable GPU",
    "load: load or stress validation",
    "security: security validation",
]

[tool.coverage.run]
omit = [
    "src/aurum/api/*",
    "src/aurum/cli.py",
    "src/aurum/demo.py",
    "src/aurum/ui.py",
    "src/aurum/llm.py",
]
